--- a/shop/mainapp/templates/base.html
+++ b/shop/mainapp/templates/base.html
@@ -56,6 +56,7 @@
         </header>
         <!-- Section-->
         <section class="py-5">
+            {% block content %}
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
@@ -257,6 +258,7 @@
                 </div>
             </div>
         </section>
+        {% endblock content %}
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
