--- a/shop/mainapp/templates/product_detail.html
+++ b/shop/mainapp/templates/product_detail.html
@@ -16,8 +16,14 @@
         <h3>{{ product.title }}</h3>
         <p>Цена: {{ product.price }} руб.</p>
         <p>Описание: {{ product.description }}</p>
-        <p>Характеристики: </p>
     </div>
+    <p class="mt-4">Характеристики: </p>
+    {% if product.category.slug == 'notebooks' %}
+        {% include 'notebook_specification.html' %}
+    {% else %}
+        {% include 'smartphone_specification.html' %}
+    {% endif %}
+    
 </div>
 
 
