--- a/shop/mainapp/templates/smartphone_specification.html
+++ b/shop/mainapp/templates/smartphone_specification.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <table class="table">
+        <tbody>
+            <tr>
+                <td>Диагональ</td>
+                <td>{{ product.diagonal }}</td>
+            </tr>
+            <tr>
+                <td>Тип дисплея</td>
+                <td>{{ product.display }}</td>
+            </tr>
+            <tr>
+                <td>Разрешение экрана</td>
+                <td>{{ product.resolution }}</td>
+            </tr>
+            <tr>
+                <td>Объем батареи</td>
+                <td>{{ product.accum_volume }}</td>
+            </tr>
+            <tr>
+                <td>Оперативная память</td>
+                <td>{{ product.ram }}</td>
+            </tr>
+            <tr>
+                <td>Наличие слота для SD карты</td>
+                {% if product.sd %}
+                    <td>Да</td>
+                {% else %}
+                    <td>Нет</td>
+                {% endif %}
+            </tr>
+            <tr>
+                <td>Максимальный объем SD карты</td>
+                <td>{{ product.sd_volume_max }}</td>
+            </tr>
+            <tr>
+                <td>Главная камера</td>
+                <td>{{ product.main_camp_mp }}</td>
+            </tr>
+            <tr>
+                <td>Фронтальная камера</td>
+                <td>{{ product.frontal_cam_mp }}</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
