--- a/shop/mainapp/templates/product_detail.html
+++ b/shop/mainapp/templates/product_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load specifications %}
 {% block content %}
 <nav aria-label="breadcrumb" class="mt-3">
     <ol class="breadcrumb">
@@ -18,6 +19,9 @@
         <p>Описание: {{ product.description }}</p>
     </div>
     <p class="mt-4">Характеристики: </p>
+
+    {{ product|product_spec }}
+
     {% if product.category.slug == 'notebooks' %}
         {% include 'notebook_specification.html' %}
     {% else %}
