--- a/shop/mainapp/templates/base.html
+++ b/shop/mainapp/templates/base.html
@@ -22,14 +22,13 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">Start Bootstrap</a>
+            <a class="navbar-brand" href="/">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Категории</a>
@@ -38,9 +37,13 @@
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
+                            <style>
+                                .nounderline {
+                                    text-decoration: none !important
+                                  }
+                            </style>
                             {% for category in categories %}
-                            <li><a class="dropdown-item" href="{{ category.url }}">{{ category.name }} ({{
-                                    category.count }})</a></li>
+                            <li><a class="dropdown-item" href="{{ category.url }}">{{ category.name }} ({{ category.count }})</a></li>
                             {% endfor %}
                         </ul>
                     </li>
@@ -48,7 +51,7 @@
                 <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
-                        Cart
+                        <a class="nounderline" href="{% url 'cart' %}">Корзина</a>
                         <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                     </button>
                 </form>
